Fix double-mirrored dabs when painting with precision < 5

Even though KisDabRenderingQueue returns mutable dabs, it doesn't
guarantee that they will be unique in the returned list. We should
be very careful with them and ensure that we don't mirror the same
paint device twice.

BUG:397831